--- a/examples/simple2.css
+++ b/examples/simple2.css
@@ -13,10 +13,15 @@
   -o-border-radius: 4px;
   border-radius: 4px;
   -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+  /* Webkit browsers */
   -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+  /* Firefox */
   -ms-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+  /* IE9 */
   -o-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5); }
+  /* Opera(Old) */
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+  /* IE9+ & News */ }
   .example:before, .example:after {
     content: " ";
     display: table; }
