add Gulp & building

--- a/examples/sass.css
+++ b/examples/sass.css
@@ -1,7 +1,7 @@
 /*!
  * prefixes.scss
  * @author    Pandao
- * @version   0.1
+ * @version   0.1.0
  * @homePage  https://github.com/pandao/prefixes.scss
  * @license   MIT
  * @copyright Copyright (c) 2015
@@ -28,4 +28,4 @@
   .example:after {
     clear: both; }
 
-/*# sourceMappingURL=simple2.css.map */
+/*# sourceMappingURL=sass.css.map */
