--- a/examples/transform.css
+++ b/examples/transform.css
@@ -8,7 +8,7 @@
  */
 .rotate {
   -webkit-transform: rotate(360deg);
-  /* Safari & Chrome */
+  /* Safari, Chrome */
   -moz-transform: rotate(360deg);
   /* Firefox 3.5~16.0 */
   -ms-transform: rotate(360deg);
@@ -17,7 +17,7 @@
 
 .rotate-x {
   -webkit-transform: rotateX(360deg);
-  /* Safari & Chrome */
+  /* Safari, Chrome */
   -moz-transform: rotateX(360deg);
   /* Firefox 3.5~16.0 */
   -ms-transform: rotateX(360deg);
@@ -26,7 +26,7 @@
 
 .rotate-y {
   -webkit-transform: rotateY(360deg);
-  /* Safari & Chrome */
+  /* Safari, Chrome */
   -moz-transform: rotateY(360deg);
   /* Firefox 3.5~16.0 */
   -ms-transform: rotateY(360deg);
