--- a/examples/mask.scss
+++ b/examples/mask.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@import "../src/prefixes";
+@import "../dist/prefixes";
 
 .mask {    
     @include mask-image(url(images/hexagon.png)); 
