--- a/examples/simple.scss
+++ b/examples/simple.scss
@@ -1,9 +1,10 @@
 @charset "UTF-8";
 
-@import "../src/prefixes";
+@import "../dist/prefixes";
 
 .example {
     @include clearfix();
     @include border-radius(4px);
     @include box-shadow(0 1px 5px rgba(0, 0, 0, .5));
+    @include background-size(cover);
 }
