--- a/src/transition.scss
+++ b/src/transition.scss
@@ -5,29 +5,34 @@
 @mixin transition($transition...) {
     -webkit-transition: $transition;  /* Safari, Chrome */
        -moz-transition: $transition;  /* Firefox 4.0~16.0 */
+         -o-transition: $transition;  /* Opera 11.5, Opera Mobile 12 */
             transition: $transition;  /* IE >9, FF >15, Opera >12.0 */
 }
 
 @mixin transition-property($property) {
     -webkit-transition-property: $property;
        -moz-transition-property: $property;  /* Firefox 4.0~16.0 */
+         -o-transition-property: $property;  /* Opera 11.5, Opera Mobile 12 */
             transition-property: $property;
 }
 
 @mixin transition-duration($duration) {
     -webkit-transition-duration: $duration;
        -moz-transition-duration: $duration;  /* Firefox 4.0~16.0 */
+         -o-transition-duration: $duration;  /* Opera 11.5, Opera Mobile 12 */
             transition-duration: $duration;
 }
 
 @mixin transition-timing-function($easing) {
     -webkit-transition-timing-function: $easing;
        -moz-transition-timing-function: $easing;  /* Firefox 4.0~16.0 */
+         -o-transition-timing-function: $easing;  /* Opera 11.5, Opera Mobile 12 */
             transition-timing-function: $easing;
 }
 
 @mixin transition-delay($delay) {
     -webkit-transition-delay: $delay;
        -moz-transition-delay: $delay;  /* Firefox 4.0~16.0 */
+         -o-transition-delay: $delay;  /* Opera 11.5, Opera Mobile 12 */
             transition-delay: $delay;
 }
